# aidiary

./: .gitignore  AGENTS.md  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/androidTest/java/com/grepiu/aidiary/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/grepiu/aidiary/: MainActivity.kt
app/src/main/java/com/grepiu/aidiary/analytics/: AnalyticsManager.kt
app/src/main/java/com/grepiu/aidiary/data/model/: ContentBlock.kt  ContentType.kt  DiaryEntry.kt  TextFormatting.kt  TitleStyle.kt
app/src/main/java/com/grepiu/aidiary/data/remote/: AppVersionChecker.kt
app/src/main/java/com/grepiu/aidiary/data/repository/: AppLockManager.kt  BackupManager.kt  BlockEntity.kt  DiaryDao.kt  DiaryDatabase.kt  DiaryEntity.kt  DiaryMeta.kt  DiaryRepository.kt  DiarySearchDao.kt  DiarySearchDatabase.kt  DiaryWithBlocks.kt  ImageStorageManager.kt  LegacyJsonImporter.kt  PlannerRepository.kt  VideoStorageManager.kt
app/src/main/java/com/grepiu/aidiary/data/slm/: DecorateResult.kt  DeviceCapabilityChecker.kt  DiaryLLMEngine.kt  ImageFormatDetector.kt  LLMContextBuilder.kt  ModelDownloaderV2.kt  SherpaEngine.kt  VideoFormatDetector.kt  WhisperEngine.kt
app/src/main/java/com/grepiu/aidiary/mvi/effect/: DiaryEffect.kt
app/src/main/java/com/grepiu/aidiary/mvi/intent/: DiaryIntent.kt
app/src/main/java/com/grepiu/aidiary/mvi/state/: DiaryState.kt
app/src/main/java/com/grepiu/aidiary/mvi/viewmodel/: DiaryViewModel.kt
app/src/main/java/com/grepiu/aidiary/ui/components/: AdMobBanner.kt  AdMobNativeAd.kt  AppDialog.kt  BlockEditor.kt  BlockRenderer.kt  ConfettiOverlay.kt  DeviceUnsupportedModal.kt  DownloadStatusCard.kt  OpenSourceLicenseModalDialog.kt  PinSetupDialog.kt  RichTextField.kt  RichTextToolbar.kt
app/src/main/java/com/grepiu/aidiary/ui/screens/: AppLockScreen.kt  DiaryDetailScreen.kt  DiaryListScreen.kt  DiarySettingsScreen.kt  DiarySplashScreen.kt  DiaryWelcomeScreen.kt  DiaryWriteScreen.kt
app/src/main/java/com/grepiu/aidiary/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/grepiu/aidiary/ui/util/: DiaryViewModeUtils.kt  WindowSizeUtils.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/grepiu/aidiary/: ExampleUnitTest.kt
app/src/test/java/com/grepiu/aidiary/data/slm/: ImageFormatDetectorTest.kt  VideoFormatDetectorTest.kt
app/src/test/java/com/grepiu/aidiary/ui/util/: DiaryViewModeUtilsTest.kt
docs/: DESIGN.md  overview.md  structure.md
docs/superpowers/plans/: 2026-07-20-diary-view-modes.md
docs/superpowers/specs/: 2026-07-20-diary-view-modes-design.md  2026-07-20-ui-ux-refactor-v3-design.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
